More compilation fixes